# ask.paris.systems

./: .gitignore  readme.md
.github/workflows/: main.yml
backend/: Dockerfile  app.py  lambda.sh  package-lock.json  package.json  pyproject.toml  serverless.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/.github/ISSUE_TEMPLATE/: feature_request.md
frontend/src/: App.vue  main.js
frontend/src/assets/: spinner-animation.json
frontend/src/common/: language.js
frontend/src/components/: Accordion.vue  BlankModal.vue  Loading.vue  Modal.vue  Spinner.vue
frontend/src/components/Misc/: ToastCloseButton.vue
frontend/src/components/Navigation/: Navbar.vue  Sidebar.vue  SidebarButton.vue  SidebarLink.vue
frontend/src/css/: satoshi.css  sugar-styles.css  tailwind.css
frontend/src/layouts/: Dashboard.vue  Default.vue
frontend/src/router/: index.js
frontend/src/services/: http.js
frontend/src/views/: ExploitGen.vue
