[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sweetroll <sweetrollbandit@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
openai = "^0.27.0"
awslambdaric = "^2.0.4"
boto3 = "^1.26.54"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
